--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js"></script>
 	<title>JavaScript</title>
 </head>
 <body>
-	
+	<button id="bgColorChangeLight" onclick="bgColorChangeDark()">Ciemny motyw</button>
+	<button id="bgColorChangeLight" onclick="bgColorChangeLight()">Jasny motyw</button>
+	<h1>test</h1>
+	<p>blalblbllala</p>
 </body>
 </html>
